Replace floating-point constructors with valueOf (#4389)